--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-    "author": "Ali Sajid Imami",
-    "dependencies": {
-        "@actions/core": "^1.10.1"
-    },
-    "description": "A Github Action to introduce a random delay in a Job",
-    "devDependencies": {
-        "@eslint/eslintrc": "3.1.0",
-        "@eslint/js": "9.12.0",
-        "@stylistic/eslint-plugin": "2.9.0",
-        "@types/eslint__js": "8.42.3",
-        "@types/jest": "29.5.13",
-        "@types/node": "20.16.10",
-        "@vercel/ncc": "0.38.2",
-        "eslint": "9.12.0",
-        "eslint-plugin-jest": "28.8.3",
-        "globals": "15.10.0",
-        "jest": "29.7.0",
-        "js-yaml": "4.1.0",
-        "prettier": "3.3.3",
-        "prettier-plugin-multiline-arrays": "3.0.6",
-        "ts-jest": "29.2.5",
-        "typescript": "5.6.2",
-        "typescript-eslint": "8.8.1"
-    },
-    "keywords": [
-        "actions",
-        "node",
-        "setup"
-    ],
-    "license": "MIT",
-    "main": "lib/main.js",
-    "name": "random-wait-action",
-    "packageManager": "pnpm@9.12.1",
-    "private": true,
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/AliSajid/random-wait-action"
-    },
-    "scripts": {
-        "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
-        "build": "tsc",
-        "format": "prettier --write '**/*.ts'",
-        "format-check": "prettier --check '**/*.ts'",
-        "lint": "eslint",
-        "package": "ncc build --source-map --license licenses.txt",
-        "test": "jest"
-    },
-    "version": "2.2.1"
+  "author": "Ali Sajid Imami",
+  "dependencies": {
+    "@actions/core": "^1.10.1"
+  },
+  "description": "A Github Action to introduce a random delay in a Job",
+  "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.11.1",
+    "@stylistic/eslint-plugin": "2.8.0",
+    "@types/eslint__js": "8.42.3",
+    "@types/jest": "29.5.13",
+    "@types/node": "20.16.10",
+    "@vercel/ncc": "0.38.2",
+    "eslint": "9.11.1",
+    "eslint-plugin-jest": "28.8.3",
+    "fast-check": "^3.22.0",
+    "globals": "15.9.0",
+    "jest": "29.7.0",
+    "js-yaml": "4.1.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-multiline-arrays": "3.0.6",
+    "ts-jest": "29.2.5",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.8.0"
+  },
+  "keywords": [
+    "actions",
+    "node",
+    "setup"
+  ],
+  "license": "MIT",
+  "main": "lib/main.js",
+  "name": "random-wait-action",
+  "packageManager": "pnpm@9.11.0",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AliSajid/random-wait-action"
+  },
+  "scripts": {
+    "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
+    "build": "tsc",
+    "format": "prettier --write '**/*.ts'",
+    "format-check": "prettier --check '**/*.ts'",
+    "lint": "eslint",
+    "package": "ncc build --source-map --license licenses.txt",
+    "test": "jest"
+  },
+  "version": "2.2.1"
 }
