--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.11.1",
+    "@fast-check/jest": "^2.0.2",
     "@stylistic/eslint-plugin": "2.8.0",
     "@types/eslint__js": "8.42.3",
     "@types/jest": "29.5.13",
@@ -22,7 +23,7 @@
     "prettier-plugin-multiline-arrays": "3.0.6",
     "ts-jest": "29.2.5",
     "typescript": "5.6.2",
-    "typescript-eslint": "8.8.0"
+    "typescript-eslint": "8.7.0"
   },
   "keywords": [
     "actions",
