--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "exclude": [
         "node_modules",
         "**/*.test.ts",
-        "megalinter-reports/**/*.js",
-        "jest.config.ts"
+        "megalinter-reports/**/*.js"
     ]
 }
