--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,18 +8,23 @@ on:
 name: Release
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
     release:
         name: Semantic Release
         runs-on: ubuntu-latest
+        permissions:
+            id-token: write
+            attestations: write
+            contents: write
+            issues: write
+            pull-requests: write
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+            - name: Harden Runner
+              uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
               with:
-                  fetch-depth: 0
-                  persist-credentials: false
+                  egress-policy: audit
 
             - name: Checkout repository
               uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
