--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
         "package": "ncc build --source-map --license licenses.txt",
         "test": "jest"
     },
-    "version": "2.2.1"
+    "version": "2.5.0-next.1"
 }
