--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=AliSajid_random-wait-action
 sonar.organization=alisajid
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=random-wait-action
 #sonar.projectVersion=1.0
