--- a/.github/workflows/check-dist.yaml
+++ b/.github/workflows/check-dist.yaml
@@ -18,26 +18,26 @@ on:
   workflow_dispatch:
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
   check-dist:
     runs-on: ubuntu-latest
 
-        steps:
-            - name: Harden Runner
-              uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-              with:
-                  egress-policy: audit
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+        with:
+          egress-policy: audit
 
-            - name: Checkout repository
-              uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+      - name: Checkout repository
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
 
       - name: Install mise
         uses: jdx/mise-action@f8dfbcc150159126838e44b882bf34bd98fd90f3 # v2.1.0
         with:
-          version: 2025.10.16
-          install_args: --yes
+          run_install: false
+          version: ${{vars.PNPM_VERSION}}
 
       - name: Set Node.js 20.x
         uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4.0.4
@@ -48,12 +48,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-            - name: Setup pnpm cache
-              uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4.1.1
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: ${{ runner.os }}-pnpm-store-
+      - name: Run the build process
+        run: pnpm run all
 
       - name: Compare the expected and actual dist/ directories
         run: |
@@ -64,21 +60,9 @@ jobs:
           fi
         id: diff
 
-            - name: Run the build process
-              run: pnpm run all
-
-            - name: Compare the expected and actual dist/ directories
-              run: |
-                  if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
-                    echo "Detected uncommitted changes after build.  See status below:"
-                    git diff
-                    exit 1
-                  fi
-              id: diff
-
-            # If index.js was different than expected, upload the expected version as an artifact
-            - uses: actions/upload-artifact@84480863f228bb9747b473957fcc9e309aa96097 # v4.4.2
-              if: ${{ failure() && steps.diff.conclusion == 'failure' }}
-              with:
-                  name: dist
-                  path: dist/
+      # If index.js was different than expected, upload the expected version as an artifact
+      - uses: actions/upload-artifact@84480863f228bb9747b473957fcc9e309aa96097 # v4.4.2
+        if: ${{ failure() && steps.diff.conclusion == 'failure' }}
+        with:
+          name: dist
+          path: dist/
