--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,32 +8,34 @@ on:
 name: Release
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
-    release:
-        name: Semantic Release
-        runs-on: ubuntu-latest
-        permissions:
-            id-token: write
-            attestations: write
-            contents: write
-            issues: write
-            pull-requests: write
-        steps:
-            - name: Harden Runner
-              uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-              with:
-                  egress-policy: audit
+  release:
+    name: Semantic Release
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      attestations: write
+      contents: write
+      issues: write
+      pull-requests: write
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+        with:
+          egress-policy: audit
 
-            - name: Checkout repository
-              uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-              with:
-                  fetch-depth: 0
-                  persist-credentials: false
+      - name: Checkout repository
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-            - name: install commitizen
-              run: pip install -U commitizen
+      - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+        with:
+          run_install: false
+          version: 9.11.0
 
             - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
               with:
@@ -55,13 +57,8 @@ jobs:
             - name: Install dependencies
               run: pnpm install
 
-            - name: Setup pnpm cache
-              uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
+      - name: Move attestation file to dist/
+        run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
 
             - name: Attest build provenance
               id: attest
