test: update jest config to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "exclude": [
         "node_modules",
         "**/*.test.ts",
-        "megalinter-reports/**/*.js"
+        "megalinter-reports/**/*.js",
+        "jest.config.ts"
     ]
 }
