--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "globals": "15.11.0",
         "jest": "29.7.0",
         "js-yaml": "4.1.0",
+        "jsdoc-to-markdown": "^9.0.2",
         "prettier": "3.3.3",
         "prettier-plugin-multiline-arrays": "3.0.6",
         "ts-jest": "29.2.5",
@@ -41,6 +42,7 @@
     "scripts": {
         "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
         "build": "tsc",
+        "document": "jsdoc2md src -r -d docs/docs",
         "format": "prettier --write '**/*.ts'",
         "format-check": "prettier --check '**/*.ts'",
         "lint": "eslint",
