--- a/package.json
+++ b/package.json
@@ -338,6 +338,7 @@
     "globals": "15.11.0",
     "jest": "29.7.0",
     "js-yaml": "4.1.0",
+    "jsdoc-to-markdown": "^9.0.2",
     "prettier": "3.3.3",
     "prettier-plugin-multiline-arrays": "3.0.6",
     "ts-jest": "29.2.5",
@@ -362,6 +363,7 @@
   "scripts": {
     "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
     "build": "tsc",
+    "document": "jsdoc2md src -r -d docs/docs",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint",
